--- a/Readme
+++ b/Readme
@@ -1,8 +1,8 @@
 Задача 1:
-Создать класс HomeLesson6.CreditCard c полями номер счета, текущая сумма на счету. Добавьте
+Создать класс CreditCard c полями номер счета, текущая сумма на счету. Добавьте
 метод, который позволяет начислять сумму на кредитную карточку. Добавьте метод,
 который позволяет снимать с карточки некоторую сумму. Добавьте метод, который
 выводит текущую информацию о карточке. Напишите программу, которая создает три
-объекта класса HomeLesson6.CreditCard у которых заданы номер счета и начальная сумма.
+объекта класса CreditCard у которых заданы номер счета и начальная сумма.
 Тестовый сценарий для проверки: Положите деньги на первые две карточки и снимите с
 третьей. Выведите на экран текущее состояние всех трех карточек.
